--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     				<p id="per-month"> per month </p>
     			</div>
     			<p> Full access for less than $1 a day </p>
-    			<button id="sign-up-button"> Sign up </button>
+    			<button onclick="alertUser()" id="sign-up-button"> Sign up </button>
     		</div><div class="lowerRightGrid">
     		<h4>Why Us</h4>
     		<ul>
